--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -10113,6 +10113,14 @@ h3 {
 .masthead {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
+  /*background-image: url("D:/WebX/root/assets/img/background.png");*/
+  /*background-size: 100% 95%*/ 
+}
+.background{
+  background-image: linear-gradient(black,white);
+}
+.nav-bar{
+  background-color: #000000 
 }
 .masthead .masthead-heading {
   font-size: 2.75rem;
